--- a/QuizGenerator/View/MainWindow.xaml
+++ b/QuizGenerator/View/MainWindow.xaml
@@ -28,7 +28,7 @@
             <TextBlock Grid.Column="0" Grid.Row="0" FontWeight="Bold" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap" TextAlignment="Center">Generator Quizów</TextBlock>
             <Button Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Width="120">Utwórz</Button>
             <Button Click="OpenReadFileDialog_Button" Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Width="120">Wczytaj</Button>
-            <Button Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" Width="120">Zapisz</Button>
+            <Button Click="OpenSaveFileDialog_Button" Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" Width="120">Zapisz</Button>
 
         </Grid>
         <Grid Grid.Column="1">
