--- a/QuizGenerator/View/MainWindow.xaml
+++ b/QuizGenerator/View/MainWindow.xaml
@@ -6,18 +6,21 @@
         xmlns:local="clr-namespace:QuizGenerator"
         xmlns:vm="clr-namespace:QuizGenerator.ViewModel"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    
+        Title="Generator Quizów" Height="450" Width="800">
+
     <Window.DataContext>
         <vm:MainViewModel x:Name="ViewModel"/>
     </Window.DataContext>
-    
+
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="4*"/>
+            <ColumnDefinition Width="40*"/>
+            <ColumnDefinition Width="9*"/>
+            <ColumnDefinition Width="21*"/>
+            <ColumnDefinition Width="90*"/>
+            <ColumnDefinition Width="640*"/>
         </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0">
+        <Grid Grid.Column="0" Grid.ColumnSpan="4">
             <Grid.RowDefinitions>
                 <RowDefinition Height="60"></RowDefinition>
                 <RowDefinition Height="40"></RowDefinition>
@@ -29,43 +32,56 @@
             </Grid.RowDefinitions>
 
             <TextBlock Grid.Column="0" Grid.Row="0" FontWeight="Bold" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Center" TextWrapping="Wrap" TextAlignment="Center">Generator Quizów</TextBlock>
-            <Button Command="{Binding CreateQuiz}" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Width="120">Utwórz Quiz</Button>
+            <Button Command="{Binding CreateQuiz}" Grid.Column="0" Grid.Row="1" VerticalAlignment="Center" Width="120">Nowy Quiz</Button>
             <Button Click="OpenReadFileDialog_Button" Grid.Column="0" Grid.Row="2" VerticalAlignment="Center" Width="120">Wczytaj Quiz</Button>
             <Button Click="OpenSaveFileDialog_Button" Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" Width="120">Zapisz Quiz</Button>
             <Button Command="{Binding CreateQuestion}" Grid.Column="0" Grid.Row="5" VerticalAlignment="Center" Width="120">Dodaj Pytanie</Button>
             <Button Command="{Binding DeleteQuestion}" Grid.Column="0" Grid.Row="6" VerticalAlignment="Center" Width="120">Usuń Pytanie</Button>
         </Grid>
-        <Grid Grid.Column="1">
+        <Grid Grid.Column="4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
+                <RowDefinition Height="0.5*"></RowDefinition>
                 <RowDefinition Height="1*"></RowDefinition>
+                <RowDefinition Height="0.5*"></RowDefinition>
                 <RowDefinition Height="1*"></RowDefinition>
+                <RowDefinition Height="0.5*"></RowDefinition>
                 <RowDefinition Height="1*"></RowDefinition>
+                <RowDefinition Height="0.5*"></RowDefinition>
                 <RowDefinition Height="1*"></RowDefinition>
+                <RowDefinition Height="0.5*"></RowDefinition>
                 <RowDefinition Height="1*"></RowDefinition>
+                <RowDefinition Height="0.5*"></RowDefinition>
                 <RowDefinition Height="1*"></RowDefinition>
                 <RowDefinition Height="1*"></RowDefinition>
             </Grid.RowDefinitions>
-            <TextBox Text="{Binding QuizName}" Grid.Column="0" Grid.ColumnSpan="2" FontSize="32" FontWeight="Bold" VerticalAlignment="Center"/>
-            <TextBox Text="{Binding QuestionName}" Grid.Row="1" Grid.ColumnSpan="2" FontSize="22" FontWeight="Bold" VerticalAlignment="Center"/>
 
-            <TextBox Text="{Binding Answers[0].Text}" Grid.Column="0" Grid.Row="2" FontSize="16" Width="300" HorizontalAlignment="Left"></TextBox>
-            <CheckBox IsChecked="{Binding Answers[0].IsCorrect}" Grid.Column="1" Grid.Row="2" VerticalAlignment="Center">Poprawna?</CheckBox>
+            <TextBlock Grid.Row="0" VerticalAlignment="Bottom">Nazwa quizu:</TextBlock>
+            <TextBox Text="{Binding QuizName}" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="2" FontSize="22" FontWeight="Bold" VerticalAlignment="Bottom" Margin="0,9,0,0"/>
+            <TextBlock Grid.Row="2" VerticalAlignment="Bottom">Treść pytania:</TextBlock>
+            <TextBox Text="{Binding QuestionName}" Grid.Row="3" Grid.ColumnSpan="2" FontSize="22" FontWeight="SemiBold" VerticalAlignment="Center"/>
 
-            <TextBox Text="{Binding Answers[1].Text}" Grid.Column="0" Grid.Row="3" FontSize="16" Width="300" HorizontalAlignment="Left"></TextBox>
-            <CheckBox IsChecked="{Binding Answers[1].IsCorrect}" Grid.Column="1" Grid.Row="3" VerticalAlignment="Center">Poprawna?</CheckBox>
+            <TextBlock Grid.Row="4" VerticalAlignment="Bottom">Odpowiedź 1:</TextBlock>
+            <TextBox Text="{Binding Answers[0].Text}" Grid.Column="0" Grid.Row="5" FontSize="16" Width="300" HorizontalAlignment="Left"></TextBox>
+            <CheckBox IsChecked="{Binding Answers[0].IsCorrect}" Grid.Column="1" Grid.Row="5" VerticalAlignment="Center">Poprawna?</CheckBox>
 
-            <TextBox Text="{Binding Answers[2].Text}" Grid.Column="0" Grid.Row="4" FontSize="16" Width="300" HorizontalAlignment="Left"></TextBox>
-            <CheckBox IsChecked="{Binding Answers[2].IsCorrect}" Grid.Column="1" Grid.Row="4" VerticalAlignment="Center">Poprawna?</CheckBox>
+            <TextBlock Grid.Row="6" VerticalAlignment="Bottom">Odpowiedź 2:</TextBlock>
+            <TextBox Text="{Binding Answers[1].Text}" Grid.Column="0" Grid.Row="7" FontSize="16" Width="300" HorizontalAlignment="Left"></TextBox>
+            <CheckBox IsChecked="{Binding Answers[1].IsCorrect}" Grid.Column="1" Grid.Row="7" VerticalAlignment="Center">Poprawna?</CheckBox>
 
-            <TextBox Text="{Binding Answers[3].Text}" Grid.Column="0" Grid.Row="5" FontSize="16" Width="300" HorizontalAlignment="Left"></TextBox>
-            <CheckBox IsChecked="{Binding Answers[3].IsCorrect}" Grid.Column="1" Grid.Row="5" VerticalAlignment="Center">Poprawna?</CheckBox>
+            <TextBlock Grid.Row="8" VerticalAlignment="Bottom">Odpowiedź 3:</TextBlock>
+            <TextBox Text="{Binding Answers[2].Text}" Grid.Column="0" Grid.Row="9" FontSize="16" Width="300" HorizontalAlignment="Left"></TextBox>
+            <CheckBox IsChecked="{Binding Answers[2].IsCorrect}" Grid.Column="1" Grid.Row="9" VerticalAlignment="Center">Poprawna?</CheckBox>
 
-            <Button Command="{Binding PrevQuestion}" Grid.Column="0" Grid.Row="6" VerticalAlignment="Center" Width="120">Poprzednie</Button>
-            <Button Command="{Binding NextQuestion}" Grid.Column="1" Grid.Row="6" VerticalAlignment="Center" Width="120">Następne</Button>
+            <TextBlock Grid.Row="10" VerticalAlignment="Bottom">Odpowiedź 4:</TextBlock>
+            <TextBox Text="{Binding Answers[3].Text}" Grid.Column="0" Grid.Row="11" FontSize="16" Width="300" HorizontalAlignment="Left"></TextBox>
+            <CheckBox IsChecked="{Binding Answers[3].IsCorrect}" Grid.Column="1" Grid.Row="11" VerticalAlignment="Center">Poprawna?</CheckBox>
+
+            <Button Command="{Binding PrevQuestion}" Grid.Column="0" Grid.Row="12" VerticalAlignment="Center" Width="120">Poprzednie</Button>
+            <Button Command="{Binding NextQuestion}" Grid.Column="1" Grid.Row="12" VerticalAlignment="Center" Width="120">Następne</Button>
         </Grid>
     </Grid>
 </Window>
